--- a/index.html
+++ b/index.html
@@ -4,24 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- Bootstrap CSS CDN link -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     />
+
+    <!-- Font awesome link -->
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
+
+    <!-- Google font link -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+
+    <!-- jQuery Link -->
     <link
       rel="stylesheet"
       href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
     />
+
+    <!-- custom style link -->
 
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Task Board</title>
@@ -43,6 +52,76 @@
         </button>
       </div>
       <!-- Todo: Create a modal with a form to add tasks -->
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="formModal"
+        tabindex="-1"
+        aria-labelledby="formModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="formModal">Add Task</h1>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <form class="container">
+                <div class="row">
+                  <div class="col-6">
+                    <div class="mb-3">
+                      <label for="task-title" class="form-label"
+                        >Task Title</label
+                      >
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="task-title"
+                        placeholder="Title of the task"
+                      />
+                    </div>
+                  </div>
+
+                  <div class="col-6">
+                    <div class="mb-3">
+                      <label for="task-due-date" class="form-label"
+                        >Task Due Date</label
+                      >
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="task-due-date"
+                        placeholder="Due date for the task"
+                      />
+                    </div>
+                  </div>
+                  <div class="col-12">
+                    <div class="mb-3">
+                      <textarea
+                        rows="3"
+                        class="form-control"
+                        placeholder="Description about the task...."
+                        id="task-description"
+                      ></textarea>
+                    </div>
+                  </div>
+                  <div class="col-4 mx-auto">
+                    <button type="submit" class="btn btn-success">
+                      Add Task
+                    </button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="row swim-lanes text-center justify-content-between">
         <div class="col-12 col-lg-4 d-flex">
           <div id="to-do" class="card border-light mb-3 lane flex-grow-1">
@@ -77,19 +156,27 @@
       </div>
     </div>
 
+    <!-- Bootstrap JS link -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+
+    <!-- jQuery JS link -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
+    <!-- jQuery UI widget support link -->
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
+
+    <!-- day js api link -->
     <script
       src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
       integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
       crossorigin="anonymous"
     ></script>
 
+    <!-- Our custom javascript link -->
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
