--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@
             <div class="card-body bg-light">
               <div id="todo-cards">
                 <!-- Todo cards -->
+                <!-- <article class="card task-card draggable my-3">
+                  <h4 class="card-header">header</h4>
+                  <div class="card-body">
+                    <p class="card-text">card text</p>
+                    <p class="card-text">card text</p>
+                    <button class="btn btn-danger border-light">Delete</button>
+                  </div>
+                </article> -->
               </div>
             </div>
           </div>
